fix blurry picture on chrome

--- a/webAO/styles/default.css
+++ b/webAO/styles/default.css
@@ -3,11 +3,8 @@ body {
 }
 
 img {
-	image-rendering: -moz-crisp-edges;
-	image-rendering: -o-crisp-edges;
-	image-rendering: -webkit-optimize-contrast;
 	image-rendering: crisp-edges;
-	-ms-interpolation-mode: nearest-neighbor;
+	image-rendering: pixelated;
 }
 
 .client_button {
